--- a/index.html
+++ b/index.html
@@ -360,7 +360,7 @@
 
   <!-- ===== Footer ===== -->
   <footer>
-    <p>&copy; 2025 Drill Driving | Founder: Abhishek | Co-Founders: Shivam & Aditya</p>
+    <p>&copy; 2025 Drill Driving | Founder: Abhishek | Co-Founders: Shivam & Kartikey</p>
   </footer>
 
   <!-- ===== Script ===== -->
