--- a/index.html
+++ b/index.html
@@ -101,7 +101,7 @@
       display: flex;
       align-items: center;
       justify-content: center;
-      background-image: url('assets/images/car-image.webp');
+      background-image: url('assets/images/6.jpg');
       background-size: cover;
       background-position: center;
       color: white;
